# rlvr

./: .env.example  .gitignore  CLAUDE.md  README.md  arbor.yaml  docker-compose.yml  dvc.yaml  justfile  params.yaml  pyproject.toml  sample-prompt.md  tmux.sh
.dvc/: config
.ruler/: .gitignore  1-philosophy.md  2-tools.md  3-python.md  mcp.json  ruler.toml
configs/: .gitignore  zero0.yaml  zero3.yaml
configs/prime-rl/: arc-agi-gpt-oss.toml  arc-agi-nanbeige.toml  arc-agi-nemotron-14b.toml  arc-agi-nemotron-8b.toml  arc-agi-nemotron.toml  arc-agi-qwen3-32b.toml  arc-agi-qwen3-8b.toml  arc-agi-train.toml  arc-agi.toml  musique.toml
configs/torchrun/: ddp.yaml  zero1.yaml  zero3.yaml
data/arc-dummy/: arc-agi_evaluation_challenges.json
docs/: debug-training.md  dspy-gepa-scratchpad.md  dspy-training.md  notes.md  scratchpad.md  train_musique_dspy_usage.md  training-prime-rl.md  training.md  troubleshooting.md  unsloth-training.md  workflow.md
docs/.archive/: debug-training.md  dspy-training.md
docs/.archive/musique-training-debug/: 00-problem-statement.md  README.md  default-parameters.md  musique-dataset.md
docs/.archive/musique-training-debug/hypotheses/: h01-advantage-scaling-instability.md  h03-kl-divergence-bug.md  h04-context-truncation.md  h05-reward-signal-degradation.md  h06-library-functionality-validation.md  h07-multi-step-environment-issues.md
docs/musique-training-debug/: 01-experiments-log.md  README.md  enhanced-logging-implementation.md  experiment-template.md  wandb-logging.md
docs/musique-training-debug/hypotheses/: h02-token-masking-errors.md  h03-kl-divergence-bug.md  h06-lora-weight-sync.md  h08-evaluation-training-mismatch.md
environments/arc_agi/: README.md  arc_agi.py  pyproject.toml
environments/arc_agi/.prime/: .env-metadata.json
environments/arc_agi/data/arc-dummy/: arc-agi_evaluation_solutions.json  arc-agi_training_challenges.json  arc-agi_training_solutions.json
environments/arc_agi/src/arc_agi/: __init__.py  data.py  env.py  repl_setup.py  rewards.py  sandbox.py  subprocess_interpreter.py
environments/arc_agi/src/arc_agi/envs/: __init__.py  iterative.py  repl.py
environments/arc_agi/tests/: __init__.py  test_repl_env.py
environments/math_python/: math_python.py
environments/vf_musique/: CLAUDE.md  README.md  data_processing.py  metrics.py  pyproject.toml  vf_musique.py
environments/vf_musique/src/vf_musique/: data.py  env.py  rewards.py  tools.py
environments/vf_musique_boxed/: pyproject.toml
environments/vf_musique_boxed/src/vf_musique_boxed/: env.py  rewards.py  tools.py
environments/vf_musique_debug/: pyproject.toml
environments/vf_musique_debug/src/vf_musique_debug/: data.py  env.py
environments/vf_musique_multi/: README.md  pyproject.toml
environments/vf_musique_multi/src/vf_musique_multi/: data.py  env.py  orchestration.py  sub_agent.py  tools.py
environments/vf_musique_structured/: pyproject.toml
environments/vf_musique_structured/src/vf_musique_structured/: data.py  env.py  metrics.py  rewards.py  tools.py
nbs/: .gitignore  dspy_gepa_musique.ipynb  dspy_gepa_musique_cot.ipynb  dspy_gepa_six.ipynb  eval_gsm8k.ipynb  eval_math_python.ipynb  eval_musique.ipynb  eval_musique_structured.ipynb  evaluate_dspy_mhqa.py  explore_musique_env.ipynb  inspect_results.ipynb  preprocess_docs.ipynb  test_musique_eval.ipynb  test_rerank_service.ipynb  test_vllm_server.ipynb  train_hover_dspy.ipynb
nbs/archive/musique-val/: inspect-results.ipynb  run.sh
nbs/archive/musique-val-mini/: exps-new.jsonl  exps-old.jsonl  inspect-results.ipynb  prepare.ipynb  run.sh
nbs/archive/musique-val/exps/: baser-koas.json  boozy-bite.json  boxed-tils.json  briny-aces.json  brood-sech.json  finer-byte.json  flush-boat.json  fusil-mirk.json  glare-jabs.json  lardy-long.json  loony-walk.json  mardy-luce.json  mazed-kind.json  print-snib.json  quiet-taal.json  sewed-alto.json  shore-site.json  slimy-dogy.json  soupy-clog.json  strip-roam.json  tarry-tosh.json  umber-areg.json.tmp  (+2 more)
nbs/archive/triviaqa-val-mini/: inspect-results.ipynb
nbs/archive/wiki-triviaqa-val-mini/: inspect-results.ipynb
nbs/musique-val/: prepare.ipynb
nbs/musique-val-mini/: exps.jsonl  inspect-results2.ipynb
nbs/musique-val/exps/: bally-hake.json  banal-jags.json  bosom-dawk.json  comfy-vlei.json  dazed-stir.json  dizzy-sail.json  doped-rant.json  forky-cyst.json  myoid-many.json  prize-cows.json  rabid-zoea.json  swept-cool.json  waspy-suss.json
nbs/triviaqa-val-mini/: prepare.ipynb
nbs/triviaqa-val-mini/exps/: batty-ribs.json  canny-coze.json  iodic-roam.json  piled-feme.json
nbs/wiki-triviaqa-val-mini/: prepare.ipynb
nbs/wiki-triviaqa-val-mini/exps/: ohmic-morn.json  raked-sera.json  run.sh  trade-rail.json  veiny-gaby.json
patches/verifiers/: stateful_tool_env.py
scripts/: CLAUDE.md  evaluate_musique.py  musique.py  prepare_hover_dataset.py  ragent.py  setup-sources.sh  train_gsm8k.py  train_math_python.py  train_musique.py  train_musique_dspy.py  train_musique_dspy2.py  train_musique_unsloth.py  train_musique_verl.py
services/rerank/: requirements.txt
services/vllm/: api_server.py
src/rlvr/datasets/: musique.py
src/rlvr/prompts/: __init__.py
src/rlvr/tools/: retrieve.py
src/rlvr/trainers/: __init__.py  enhanced_grpo_trainer.py
src/rlvr/utils/: __init__.py  llm.py  logging_helpers.py  prompt.py  repro.py  tracking.py
tests/: conftest.py  test_cli_structure.py  test_llm_server.py  test_make_retrieve_tool.py  test_musique_env.py  test_retrieve_tool.py  test_simple_structure.py
webapp/: .sesskey  README.md  app.py  components.py  data_loader.py
webapp/static/: app.js  style.css
(+30 files in other folders)
