[project]
name = "rlvr"
authors = [
    {name = "Baris Deniz Saglam", email = "bdsaglam@gmail.com"},
]
version = "0.1.0"
description = "Reinforcement learning with verifier rewards"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "openai>=1.90.0",
    "verifiers[all]>=0.1.2",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "wandb>=0.21.0",
    "vf-musique",
    "verl>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
search = [
    "duckduckgo-search",
]
codex = [
    "e2b-code-interpreter",
    "docker",
    "numpy",
    "scipy",
    "sympy",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib",
    "seaborn",
    "pandas",
    "tabulate",
    "dvc",
    "dvc-s3",
    "mlflow>=3.3.1",
    "python-fasthtml>=0.12.25",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = ["environments/vf_musique"]

[tool.uv.sources]
vf-musique = { workspace = true }
