[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "rlvr"
authors = [
    {name = "Baris Deniz Saglam", email = "bdsaglam@gmail.com"},
]
version = "0.1.0"
description = "Reinforcement learning with verifier rewards"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "openai>=1.90.0",
    "verifiers[train]>=0.1.3",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "wandb>=0.21.0",
    "arbor-ai>=0.2.5",
    "dspy>=3.0.2",
    "bm25s>=0.2.13",
    "pystemmer>=3.0.0",
    "jax[cpu]>=0.7.1",
    "vllm>=0.10.1.1",
    "openai-agents>=0.2.11",
    "uuid6>=2025.0.1",
]

[project.optional-dependencies]
search = [
    "duckduckgo-search",
]
codex = [
    "e2b-code-interpreter",
    "docker",
    "numpy",
    "scipy",
    "sympy",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib",
    "seaborn",
    "pandas",
    "tabulate",
    "dvc",
    "dvc-s3",
    "mlflow>=3.3.1",
    "python-fasthtml>=0.12.25",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
prime-rl = { path = "prime-rl", editable = true }
