[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "rlvr"
authors = [
    {name = "Baris Deniz Saglam", email = "bdsaglam@gmail.com"},
]
version = "0.1.0"
description = "Reinforcement learning with verifier rewards"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "openai>=1.90.0",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "vllm>=0.10.1.1",
    "uuid6>=2025.0.1",
    "unsloth>=2025.10.1",
    "flash-attn>=2.8.3",
    "wandb>=0.21.0",
    "weave>=0.52.25",
    "prime>=0.5.27",
    "prime-rl",
    "vf-musique",
    "arc-agi",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib",
    "seaborn",
    "pandas",
]

[tool.uv.pip]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
vf-musique = { path = "environments/vf_musique", editable = true }
arc-agi = { path = "environments/arc_agi", editable = true }
prime-rl = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "tmp/repos/prime-rl",
]

