[project]
name = "vf-musique-structured"
version = "0.0.1"
description = "MuSiQue environment for multi-hop question answering with structured output"
readme = "README.md"
authors = [
    { name = "Barış Deniz Sağlam", email = "bdsaglam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "httpx>=0.24.0",
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
